<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/scrollview_quick_settings"
    style="@style/width_height_fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/width_height_fill_parent"
        android:orientation="vertical"
        android:paddingBottom="10px">
        <com.google.ads.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="a15102f888bc59e"
            ads:loadAdOnCreate="true" />
        <RadioGroup style="@style/width_fill_parent">
            <RadioButton
                android:id="@+id/radiobutton_ringer_mode_normal"
                style="@style/t1"
                android:text="@string/normal" />
            <RadioButton
                android:id="@+id/radiobutton_ringer_mode_vibrate"
                style="@style/t1"
                android:text="@string/vibrate" />
            <RadioButton
                android:id="@+id/radiobutton_ringer_mode_silent"
                style="@style/t1"
                android:text="@string/silent" />
        </RadioGroup>
        <TextView
            style="@style/t1_center"
            android:text="@string/ringer_volume" />
        <SeekBar
            android:id="@+id/seekbar_ringer_volume"
            style="@style/width_fill_parent_padding2" />
        <TextView
            style="@style/t1_center"
            android:text="@string/notification_volume" />
        <SeekBar
            android:id="@+id/seekbar_notification_volume"
            style="@style/width_fill_parent_padding2" />
        <TextView
            style="@style/t1_center"
            android:text="@string/system_volume" />
        <SeekBar
            android:id="@+id/seekbar_system_volume"
            style="@style/width_fill_parent_padding2" />
        <TextView
            style="@style/t1_center"
            android:text="@string/alarm_volume" />
        <SeekBar
            android:id="@+id/seekbar_alarm_volume"
            style="@style/width_fill_parent_padding2" />
        <TextView
            style="@style/t1_center"
            android:text="@string/media_volume" />
        <SeekBar
            android:id="@+id/seekbar_media_volume"
            style="@style/width_fill_parent_padding2" />
        <TextView
            style="@style/t1_center"
            android:text="@string/voice_call_volume" />
        <SeekBar
            android:id="@+id/seekbar_voice_call_volume"
            style="@style/width_fill_parent_padding2" />
    </LinearLayout>
</ScrollView>